@@ -1,6 +1,5 @@
 package com.company;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 
@@ -9,7 +8,7 @@ public class QualityScanner {
     public Collection<String> qualityScanner(String url) {
         System.out.println("qualityScan ...");
         return Arrays.asList("Err1", "Err2");
-        // return new ArrayList(Arrays.asList("Err1", "Err2"));
-        // return List.of("Err1", "Err2");
+        // lub return new ArrayList(Arrays.asList("Err1", "Err2"));
+        // lub return List.of("Err1", "Err2");
     }
 }
