@@ -7,9 +7,9 @@ import java.util.Collection;
 public class SecurityScanner {
 
     public Collection<String> securityScanner(String url) {
-        System.out.println("securityScanner ...");
-        // return Arrays.asList("SecErr1", "SecErr2");
+        System.out.println("SecurityScanner ...");
         return new ArrayList(Arrays.asList("SecErr1", "SecErr2"));
-        // return List.of("SecErr1", "SecErr2");
+        // lub return Arrays.asList("SecErr1", "SecErr2");
+        // lub eturn List.of("SecErr1", "SecErr2");
     }
 }
